fix: allow slider overflow on small screens

--- a/apps/parachain-tracker/src/app/home/featured/featured.component.scss
+++ b/apps/parachain-tracker/src/app/home/featured/featured.component.scss
@@ -36,8 +36,8 @@
 }
 
 .featured-slider {
-    margin: 32px 56px 0;
-    width: calc(100% - 112px);
+    padding: 32px 56px 0;
+    width: 100%;
 }
 
 .view-all-svg {
