--- a/apps/parachain-tracker/src/app/home/top-items/top-items.component.scss
+++ b/apps/parachain-tracker/src/app/home/top-items/top-items.component.scss
@@ -36,8 +36,8 @@
 }
 
 .items-slider {
-    margin: 32px 56px 48px;
-    width: calc(100% - 112px);
+    padding: 32px 56px 48px;
+    width: 100%;
 }
 
 .view-all-svg {
